--- a/res/css/main.css
+++ b/res/css/main.css
@@ -26,7 +26,6 @@ a, a:link, a:visited {
 }
 
 body {
-    font-family: "Pixelated MS Sans Serif", Arial, Helvetica, sans-serif;
     background-color: #008080;
     cursor: url('/res/img/cursor/pointer.png'), auto;
 }
@@ -73,6 +72,7 @@ p#title {
 }
 
 h3 {
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
     text-align: left;
